Adeguamento dei test